--- a/AddressBook/package.json
+++ b/AddressBook/package.json
@@ -10,7 +10,10 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "express": "^4.14.1"
+    "body-parser": "^1.16.1",
+    "express": "^4.14.1",
+    "mongoose": "^4.8.3",
+    "morgan": "^1.8.1"
   },
   "jspm": {
     "directories": {
