--- a/node.js/package.json
+++ b/node.js/package.json
@@ -2,6 +2,7 @@
   "name": "nodejs-hello",
   "version": "0.0.1",
   "dependencies": {
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "morgan": "^1.8.1"
   }
 }
